#10608 Показывать пустые строки в файле экспорта, когда не было проходов

--- a/config/texts.ini
+++ b/config/texts.ini
@@ -13,3 +13,4 @@ app.export.col_out = "Уход"
 app.export.col_diff = "Разница"
 app.export.col_lunch = "Обед"
 app.export.col_res = "Итог"
+app.export.sum = "Сумма"
