--- a/config/texts.ini
+++ b/config/texts.ini
@@ -14,3 +14,9 @@ app.export.col_diff = "Разница"
 app.export.col_lunch = "Обед"
 app.export.col_res = "Итог  "
 app.export.sum = "Сумма"
+
+app.enters.title = "Система пропусков"
+app.enters.filter = "Фильтр"
+app.enters.page-title = "Регистрация входов и выходов по пропуску"
+app.enters.time = "Время"
+app.enters.working-time = "Рабочее время:"
