Убрана необходимость использовать Route::act('...#...') в маршрутах, теперь можно писать '...#...'

--- a/config/texts.ini
+++ b/config/texts.ini
@@ -13,7 +13,11 @@ app.export.col_out = "Уход"
 app.export.col_diff = "Разница"
 app.export.col_lunch = "Обед"
 app.export.col_res = "Итог  "
+app.export.col_fulltime = "Норма"
+app.export.col_salary = "Зарплата"
 app.export.sum = "Сумма"
+app.export.salary = "Оклад:"
+app.export.salary_hour = "Рубли/час:"
 
 app.enters.title = "Система пропусков"
 app.enters.filter = "Фильтр"
